--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>❤Nightingale Chairs | Task Seating Specialist❤</title>
 </head>
 
-<body>
+<body style="background-color: #dddddd;">
   <img src="image/GettyImages-1196398279-784x441.jpg" alt="Sungmin profile picture">
   <h1>Sung Min Park</h1>
   <p><em><strong>Our images</strong> are worth of thoudsand words.</em></p>
